<resources>
    <string name="app_name">ApartmentBuddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">action_settings</string>
    <string name="adv_tab_apartments">Apartments ></string>
    <string name="adv_tab_items">Items ></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_logout">Logout</string>
    <string name="text_register">Register</string>
    <string name="text_submit">Submit</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="apartment_number_text">Apartment Number</string>
    <string name="contact_number">Contact Number</string>
    <string name="role_admin_text">Admin</string>
    <string name="role_admin_Tenant">Tenant</string>
    <string name="login">User Login</string>
    <string name="registration">User Registration</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_new_user">New User?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="update_profile">Update Profile</string>
    <string name="back_button">Back</string>
    <string-array name="Condition">
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string-array name="Category">
        <item>Books</item>
        <item>Bikes</item>
        <item>Cell Phones</item>
        <item>Clothing</item>
        <item>Electronics</item>
        <item>Tools</item>
        <item>TV &amp; Video</item>
    </string-array>
    <string name="time">time</string>
    <string name="status">status</string>
    <string name="date">Date</string>
    <string-array name="status_options">
        <item>Not responded</item>
        <item>Open</item>
        <item>Close</item>
    </string-array>
</resources>