<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Registration">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/registration_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:paddingTop="16dp"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/logo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:text="@string/registration"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:hint="@string/hint_name"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_gray" />

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_gray" />

            <EditText
                android:id="@+id/txt_aprtnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:hint="@string/apartment_number_text"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_gray" />

            <EditText
                android:id="@+id/txt_contact_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:hint="@string/contact_number"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_gray" />

            <EditText
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/light_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:text="Role"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1"
                android:layout_below="@+id/textView"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="Tenant" />

                <RadioButton
                    android:text="Admin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioButton6"
                    android:layout_weight="1"
                    />
            </RadioGroup>
            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/appThemeColor"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/text_register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_already_logged_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:enabled="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/appThemeColor"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/text_already_member"
                android:textSize="14sp" />

            <ProgressBar
                android:id="@+id/progress_bar_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="fill_vertical"
                android:visibility="gone"></ProgressBar>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>