<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".fragments.UpdateProfile"
    >

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grad"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:id="@+id/imgUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/circle_border">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="9dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/circle"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    />

            </RelativeLayout>
            <TextView
                android:id="@+id/txt_profile_header_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imgUser"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12sp"
                android:fontFamily="sans-serif-light"
                android:text="Username"
                android:textColor="@color/white"
                android:textSize="32sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rellay1"
            android:orientation="horizontal" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linlay1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/txt_profile_apartment_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/shape"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:hint="@string/apartment_number_text"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_gray"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/txt_profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="9dp"
                        android:background="@drawable/shape"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:hint="@string/hint_name"
                        android:minHeight="48dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_gray"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/txt_profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/shape"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:hint="@string/hint_email"
                        android:layout_marginBottom="9dp"
                        android:inputType="textEmailAddress"
                        android:minHeight="48dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_gray"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/txt_profile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/shape"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:hint="@string/contact_number"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_gray"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/txt_profile_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/shape"
                        android:fontFamily="@font/sf_pro_display_semibold"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:minHeight="48dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_gray"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/btn_profile_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:backgroundTint="@color/appThemeColor"
                        android:fontFamily="@font/sf_pro_display_bold"
                        android:text="@string/text_submit"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_hidden_role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="0dp"
                        android:textColor="@color/appThemeColor"
                        android:fontFamily="@font/sf_pro_display_bold"
                        android:text="role"
                        android:visibility="invisible"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btn_profile_back"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="@color/appThemeColor"
                        android:fontFamily="@font/sf_pro_display_bold"
                        android:text="@string/back_button"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>